bk_ida/gccida/c2/bitmap_operation
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:975:63: error: must use 'enum' tag to refer to type 'bitmap_bits'
int  bitmap_operation( bitmap to, bitmap from1, bitmap from2, bitmap_bits operation) 
                                                              ^
                                                              enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:977:1: error: must use 'enum' tag to refer to type 'bitmap_bits'
bitmap_bits v4; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1025:12: error: expected expression
*( _OWORD *)&to->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1025:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&to->first = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1101:12: error: expected expression
*( _OWORD *)( object_base + 24) = v10; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1101:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 24) = v10; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1175:73: error: use of undeclared identifier 'xmm'
_mm_xor_si128( _mm_loadu_si128( ( const __m128i *)v16->bits), ( __m128i)xmm*(short *)0x63FCE0), 
                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1182:34: error: member reference base type '__attribute__((__vector_size__(4 * sizeof(int)))) int' (vector of 4 'int' values) is not a structure or union
v30 = _mm_shuffle_epi32( v29, 78).m128i_u64[0]; 
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1183:52: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v11 |= v30 != *( ( _QWORD *)object_base + 4) || v29.m128i_i64[0] != *( ( _QWORD *)object_base + 3); 
                                                ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1185:9: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
if ( v29.m128i_i64[0] | v30 ) 
     ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1232:12: error: expected expression
*( _OWORD *)object_base = v10; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/bitmap.c:1232:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)object_base = v10; 
   ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_operation/src/obj/bitmap.o] Error 1
